ISSUE:  670  PURPOSE:  Transaction Styles    DESC:  Header squishing

--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -283,7 +283,7 @@ body > .container {
 }
 .login-form {
 	position: absolute;
-	top: 8px;
+	top: 0px;
 	right: 5px;
 }
 @media only screen and (max-width: 990px) {
